--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -12,7 +12,7 @@
 			</span>
 		</span>
 	</div>
-	<div class="cmds text-left" style="display:block">
+	<div class="cmds text-left" style="padding: 5px; display:block">
 		<div class="tooltips" data-cmd_id="#namedistriid#" style="margin-left:5px;display: #namedistri_display#">
 			<span title="Distribution Linux || Date valeur : #namedistri_value# || Date collecte : #namedistri_collect#" class="fab fa-linux" style="min-width:15px"></span>
 			<span>#namedistri#</span>
