--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -1,7 +1,8 @@
 <div class="eqLogic eqLogic-widget col2" data-eqLogic_id="#id#" data-eqType="#eqType#" data-version="#version#" data-eqLogic_uid="#uid#" data-translate-category="#translate_category#" data-category="#category#" data-tags="#tags#" style="#style#">
-	<div class="widget-name text-center">
-		<span class="reportModeVisible">#name_display# <span class="object_name">#object_name#</span></span>
-		<a href="#eqLink#" class="reportModeHidden">#name_display# <span class="object_name">#object_name#</span></a>
+	<div class="widget-name">
+		<center>
+			<span class="widget-name" style="#hideEqLogicName#">#name_display# <span class="object_name" style="font-size: 0.85em;position: relative;top:-2px;display:none;">#object_name#</span></span>
+		</center>
 		<span class="cmd refresh pull-right cursor">
 			<span id="iconSSH#id#"></span>
 			<span title="Eteindre l'Equipement" class="poweroff tooltips" data-type="action" data-subtype="other" data-cmd_id="#cmd_poweroff_id#" style="display: #cmd_poweroff_display#;">
