--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -35,30 +35,24 @@
 		</span>
 	</span>
 	<center>
-		<span class="widget-name" style="#hideEqLogicName#">#name_display#
-			<span class="object_name"
-				style="font-size: 0.85em;position: relative;top:-2px;display:none;">#object_name#</span></span>
+		<span class="widget-name" style="#hideEqLogicName#">#name_display# <span class="object_name" style="font-size: 0.85em;position: relative;top:-2px;display:none;">#object_name#</span></span>
 	</center>
 	<div style="padding: 5px;">
-		<div class="cmd tooltips" style="margin-left:5px;display: #namedistri_display#;">
-			<span title="Distribution Linux || Date valeur : #namedistri_value# || Date collecte : #namedistri_collect#"
-				class="fab fa-linux" style="min-width:15px"></span>
-			<span class="state">#namedistri#</span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #namedistri_display#">
+			<span title="Distribution Linux || Date valeur : #namedistri_value# || Date collecte : #namedistri_collect#" class="fab fa-linux" style="min-width:15px"></span>
+			<span>#namedistri#</span>
 		</div>
-		<div class="cmd tooltips" style="margin-left:5px;display: #uptime_display#;">
-			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#"
-				class="fas fa-tachometer-alt" style="min-width:15px"></span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #uptime_display#">
+			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#" class="fas fa-tachometer-alt" style="min-width:15px"></span>
 			<span id="uptime#id#"></span>
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				$('#uptime#id#').append('<span class="state">#uptime#</span>');
+				$('#uptime#id#').append('<span>#uptime#</span>');
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #loadavg_display#;">
-			<span
-				title="Charge système (load average) || Date valeur : #loadavg_value# || Date collecte : #loadavg_collect#"
-				class="fa techno-courbes3" style="width:15px"></span>
+		<div class="cmd tooltips" style="margin-left:5px;display: #loadavg_display#">
+			<span title="Charge système (load average) || Date valeur : #loadavg_value# || Date collecte : #loadavg_collect#" class="fa techno-courbes3" style="width:15px"></span>
 			<span id="loadavg1mn#id#"></span><span id="loadavg5mn#id#"></span><span id="loadavg15mn#id#"></span>
 		</div>
 		<script>
@@ -98,7 +92,7 @@
 				}
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#;">
+		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#">
 			<span title="Mémoire vive (% libre) || Date valeur : #Mem_value# || Date collecte : #Mem_collect#"
 				class="fa techno-memory" style="width:15px"></span>
 			<span id="Mempourcent#id#"></span>
@@ -114,11 +108,11 @@
 				} else if (parseInt('#Mempourc#') < parseInt('#Mempourc_colorlow#')) {
 					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-danger-color) !important;" >#Mempourc#%</span>)');
 				} else {
-					$('#Mempourcent#id#').append('#Mem# (<span class="state">#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span class="state">#Mempourc#</span><span>%</span>)');
 				}
 			}
 		</script>
-		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_swap_display#;">
+		<div class="cmd tooltips" style="margin-left:5px;display: #Mem_swap_display#">
 			<span title="Mémoire Swap (% libre) || Date valeur : #Mem_swap_value# || Date collecte : #Mem_swap_collect#"
 				class="fas fa-list" style="width:15px"></span>
 			<span id="Swappourc#id#"></span>
@@ -134,7 +128,7 @@
 				} else if (parseInt('#Swappourc#') < parseInt('#Swappourc_colorlow#')) {
 					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-danger-color) !important;" >#Swappourc#%</span>)');
 				} else {
-					$('#Swappourc#id#').append('#Mem_swap# (<span class="state">#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span class="state">#Swappourc#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -146,7 +140,7 @@
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				$('#ethernet0#id#').append('<span class="state">#ethernet0#</span>');
+				$('#ethernet0#id#').append('<span>#ethernet0#</span>');
 			}
 		</script>
 		<div class="cmd tooltips" style="margin-left:5px;display: #hddused_display#;">
@@ -237,20 +231,20 @@
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 				if ('#cpu_temp#' !== '' && '#cpu_temp_display#' == 'OK') {
 					if (parseFloat('#cpu_temp#') < parseFloat('#cpu_temp_colorlow#')) {
-						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-success-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu#id#').append('<span class="state">#cpu# </span>');
+						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-success-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else if ((parseFloat('#cpu_temp#') >= parseFloat('#cpu_temp_colorlow#')) && (parseFloat('#cpu_temp#') <= parseFloat('#cpu_temp_colorhigh#'))) {
-						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-warning-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu#id#').append('<span class="state">#cpu# </span>');
+						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-warning-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else if ((parseFloat('#cpu_temp#') > parseFloat('#cpu_temp_colorhigh#')) && '#cpu_temp_colorhigh#' !== '') {
-						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-danger-color) !important;" >#cpu_temp#°C</span>)');
+						$('#cpu#id#').append('<span class="state">#cpu# </span>');
+						$('#cpu_temp#id#').append('(<span class="state" style="color: var(--al-danger-color) !important;" >#cpu_temp#</span><span>°C</span>)');
 					} else {
 						$('#cpu#id#').append('<span>#cpu# </span>');
-						$('#cpu_temp#id#').append('(<span class="state">#cpu_temp#°C</span>)');
+						$('#cpu_temp#id#').append('(<span class="state">#cpu_temp#</span><span>°C</span>)');
 					}
 				} else {
-					$('#cpu#id#').append('<span class="state">#cpu#</span>');
+					$('#cpu#id#').append('<span>#cpu#</span>');
 				}
 			}
 		</script>
