--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -102,11 +102,11 @@
 				if ('#Mempourc#' === '') {
 					$('#Mempourcent#id#').append('<span class="state">#Mem#</span>');
 				} else if ((parseInt('#Mempourc#') > parseInt('#Mempourc_colorhigh#')) && '#Mempourc_colorhigh#' !== '') {
-					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-success-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-success-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else if ((parseInt('#Mempourc#') >= parseInt('#Mempourc_colorlow#')) && (parseInt('#Mempourc#') <= parseInt('#Mempourc_colorhigh#'))) {
-					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-warning-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-warning-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else if (parseInt('#Mempourc#') < parseInt('#Mempourc_colorlow#')) {
-					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-danger-color) !important;" >#Mempourc#%</span>)');
+					$('#Mempourcent#id#').append('#Mem# (<span class="state" style="color: var(--al-danger-color) !important;" >#Mempourc#</span><span>%</span>)');
 				} else {
 					$('#Mempourcent#id#').append('#Mem# (<span class="state">#Mempourc#</span><span>%</span>)');
 				}
@@ -122,11 +122,11 @@
 				if ('#Swappourc#' === '') {
 					$('#Swappourc#id#').append('<span class="state">#Mem_swap#</span>');
 				} else if ((parseInt('#Swappourc#') > parseInt('#Swappourc_colorhigh#')) && '#Swappourc_colorhigh#' !== '') {
-					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-success-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-success-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else if ((parseInt('#Swappourc#') >= parseInt('#Swappourc_colorlow#')) && (parseInt('#Swappourc#') <= parseInt('#Swappourcc_colorhigh#'))) {
-					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-warning-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-warning-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else if (parseInt('#Swappourc#') < parseInt('#Swappourc_colorlow#')) {
-					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-danger-color) !important;" >#Swappourc#%</span>)');
+					$('#Swappourc#id#').append('#Mem_swap# (<span class="state" style="color: var(--al-danger-color) !important;" >#Swappourc#</span><span>%</span>)');
 				} else {
 					$('#Swappourc#id#').append('#Mem_swap# (<span class="state">#Swappourc#</span><span>%</span>)');
 				}
@@ -154,11 +154,11 @@
 				if ('#hddpourcused#' === '') {
 					$('#hddpourcused#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcused#') < parseInt('#hddpourcused_colorlow#')) {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcused#') >= parseInt('#hddpourcused_colorlow#')) && (parseInt('#hddpourcused#') <= parseInt('#hddpourcused_colorhigh#'))) {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcused#') > parseInt('#hddpourcused_colorhigh#')) && '#hddpourcused_colorhigh#' !== '') {
-					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcused#%</span>)');
+					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcused#</span><span>%</span>)');
 				} else {
 					$('#hddpourcused#id#').append('Total : #hddtotal# - Utilisé : #hddused# (<span class="state">#hddpourcused#%</span>)');
 				}
@@ -173,13 +173,13 @@
 				if ('#hddpourcusedv2#' === '') {
 					$('#hddpourcusedv2#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedv2#') < parseInt('#hddpourcusedv2_colorlow#')) {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedv2#') >= parseInt('#hddpourcusedv2_colorlow#')) && (parseInt('#hddpourcusedv2#') <= parseInt('#hddpourcusedv2_colorhigh#'))) {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedv2#') > parseInt('#hddpourcusedv2_colorhigh#')) && '#hddpourcusedv2_colorhigh#' !== '') {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedv2#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state">#hddpourcusedv2#%</span>)');
+					$('#hddpourcusedv2#id#').append('Total : #hddtotalv2# - Utilisé : #hddusedv2# (<span class="state">#hddpourcusedv2#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -192,13 +192,13 @@
 				if ('#hddpourcusedusb#' === '') {
 					$('#hddpourcusedusb#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedusb#') < parseInt('#hddpourcusedusb_colorlow#')) {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedusb#') >= parseInt('#hddpourcusedusb_colorlow#')) && (parseInt('#hddpourcusedusb#') <= parseInt('#hddpourcusedusb_colorhigh#'))) {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedusb#') > parseInt('#hddpourcusedusb_colorhigh#')) && '#hddpourcusedusb_colorhigh#' !== '') {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedusb#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state">#hddpourcusedusb#%</span>)');
+					$('#hddpourcusedusb#id#').append('Total : #hddtotalusb# - Utilisé : #hddusedusb# (<span class="state">#hddpourcusedusb#</span><span>%</span>)');
 				}
 			}
 		</script>
@@ -211,13 +211,13 @@
 				if ('#hddpourcusedesata#' === '') {
 					$('#hddpourcusedesata#id#').append('<span></span>');
 				} else if (parseInt('#hddpourcusedesata#') < parseInt('#hddpourcusedesata_colorlow#')) {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-success-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedesata#') >= parseInt('#hddpourcusedesata_colorlow#')) && (parseInt('#hddpourcusedesata#') <= parseInt('#hddpourcusedesata_colorhigh#'))) {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-warning-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else if ((parseInt('#hddpourcusedesata#') > parseInt('#hddpourcusedesata_colorhigh#')) && '#hddpourcusedesata_colorhigh#' !== '') {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state" style="color: var(--al-danger-color) !important;">#hddpourcusedesata#</span><span>%</span>)');
 				} else {
-					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state">#hddpourcusedesata#%</span>)');
+					$('#hddpourcusedesata#id#').append('Total : #hddtotalesata# - Utilisé : #hddusedesata# (<span class="state">#hddpourcusedesata#</span><span>%</span>)');
 				}
 			}
 		</script>
